<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        android:elevation="24dp"
        android:padding="6dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/chango"
            android:text="@string/title_text"
            android:textColor="@color/title_text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/Question_holder"
            android:layout_width="381dp"
            android:layout_height="146dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#1B213A"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Question_counter">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/question_text"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/True_button"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="364dp"
            android:backgroundTint="#6D101326"
            android:text="@string/True_button_text"
            android:textColor="@color/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Question_holder" />

        <Button
            android:id="@+id/False_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginTop="8dp"
            android:backgroundTint="#6D101326"
            android:padding="@dimen/button_padding"
            android:text="@string/False_button_text"
            android:textColor="@color/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/True_button" />

        <Button
            android:id="@+id/Next_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_margin="@dimen/button_margin"
            android:layout_marginTop="8dp"
            android:backgroundTint="#6D101326"
            android:padding="@dimen/button_padding"
            android:text="@string/next_button_text"
            android:textColor="@color/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/False_button" />

        <Button
            android:id="@+id/Quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#6D101326"
            android:text="@string/Quit_button"
            android:textColor="@color/button_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Next_button"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/False_button"
            app:layout_constraintVertical_bias="0.04" />

        <TextView
            android:id="@+id/Question_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:text="@string/question_counter"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/score_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:padding="6dp"
            android:text="@string/score_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toEndOf="@+id/Question_counter"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>